Vishal/tf14 xla fixes (#13)
* copy over of tf1.13 hlo_pass, but doesn't work out of box yet

* commented out breaking hlo optimizer

* xla extract

Conflicts:
	tensorflow/tools/xla_extract/tf_graph_example.py
	tensorflow/tools/xla_extract/tf_graph_to_xla_lib.cc

* naming output to match

* merge conflict (#11)

Conflicts:
	tensorflow/tools/xla_extract/tf_graph_to_xla_lib.cc

* Fix XLA for GPU and crash

Conflicts:
	.gitignore
	tensorflow/tools/xla_extract/tf_graph_to_xla_lib.cc

* fixing type of shape

* updating test script

* adding env flags for optimizations

* adding logs

* clean up

Co-authored-by: Chris Olivier <cjolivier01@gmail.com>

--- a/tensorflow/tools/pip_package/BUILD
+++ b/tensorflow/tools/pip_package/BUILD
@@ -103,6 +103,7 @@ COMMON_PIP_DEPS = [
     "//tensorflow/tools/docs:generate_lib",
     "//tensorflow/tools/docs:parser",
     "//tensorflow/tools/docs:py_guide_parser",
+    "//tensorflow/tools/xla_extract",
 ]
 
 COMMON_PIP_DEPS_V1 = COMMON_PIP_DEPS + [
